<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    tools:context=".Screens.UserRegistration">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="520dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_layout"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <TextView
                android:id="@+id/txtDisplay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/et_reg_display"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTxtName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/et_reg_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="@+id/txtDisplay"
                app:layout_constraintStart_toStartOf="@+id/txtDisplay"
                app:layout_constraintTop_toBottomOf="@+id/txtDisplay" />

            <EditText
                android:id="@+id/editTxtNumber"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/baseline_phone_android_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/et_reg_num"
                android:inputType="phone"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="@+id/editTxtEmail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTxtEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTxtEmail" />

            <EditText
                android:id="@+id/firstPass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/baseline_password_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/et_reg_pass_one"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="@+id/editTxtNumber"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTxtNumber"
                app:layout_constraintTop_toBottomOf="@+id/editTxtNumber" />

            <EditText
                android:id="@+id/secondPass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/baseline_password_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/et_reg_pass_two"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="@+id/firstPass"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/firstPass"
                app:layout_constraintTop_toBottomOf="@+id/firstPass" />

            <EditText
                android:id="@+id/editTxtEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/et_reg_email"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="@+id/editTxtName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTxtName"
                app:layout_constraintTop_toBottomOf="@+id/editTxtName" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/classy_black"
                android:fontFamily="@font/poppins"
                android:text="@string/et_reg_btn"
                app:layout_constraintEnd_toEndOf="@+id/secondPass"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/secondPass"
                app:layout_constraintTop_toBottomOf="@+id/secondPass" />

            <Button
                android:id="@+id/btnLogin2"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/classy_black"
                android:fontFamily="@font/poppins"
                android:text="@string/et_btn_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/secondPass"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/btnRegister"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>